<resources>
    <string name="app_name">Receitas</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="receita_content_description">Imagem da receita</string>
    <string name="nome_receita">Nome da Receita</string>
    <string name="texto_botao_ingredientes">Ingredientes</string>
    <string name="texto_botao_steps">Como Fazer</string>
    <string name="ingrediente">Ingrediente</string>
    <string name="quantidade">Quantidade</string>
    <string name="medida">Tipo de Medida</string>
    <string name="sem_receita">Selecione uma receita na lateral</string>
    <string name="titulo_passo">Passo a Passo</string>
    <string name="descricao_curta">Descrição Curta</string>
    <string name="descricao">Descricao de como fazer a receita</string>
    <string name="id_passo">1-</string>
    <string name="appwidget_text">Receitas</string>
    <string name="appwidget_empty_text">OS INGREDIENTES APARECERÃO APÓS EXECUTAR O APLICATIVO DE &quot;RECEITAS&quot;</string>
    <string name="add_widget">Adicionar Widget</string>
    <string name="snackIngredientes">Lista de ingredientes adicionada ao Widget</string>
</resources>
