<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_receita"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/card_cornerRadius"
    app:cardElevation="@dimen/card_elevation"
    app:cardUseCompatPadding="true"
    tools:context="br.com.agilles.receitas.ui.fragments.ListaReceitasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/receitas_nome_receita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/tamanho_titulo"
            tools:text="@string/nome_receita" />

        <ImageView
            android:id="@+id/receitas_imagem_principal"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/tamanho_imagem_receita"
            android:layout_margin="5dp"
            android:contentDescription="@string/receita_content_description"
            android:scaleType="centerCrop"
            android:src="@drawable/food_placeholder" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">

            <Button
                android:id="@+id/btn_ingredientes"
                style="@style/EstiloBotaoCards"
                android:text="@string/texto_botao_ingredientes" />

            <Button
                android:id="@+id/btn_passos"
                style="@style/EstiloBotaoCards"
                android:text="@string/texto_botao_steps" />
        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>
