<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/cor_descricao"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:src="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margem_padrao"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/tamanho_sub_titulo"
        app:layout_constraintBottom_toBottomOf="@id/cor_descricao"
        app:layout_constraintEnd_toEndOf="@id/cor_descricao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@id/cor_descricao"
        app:layout_constraintTop_toTopOf="@id/cor_descricao"
        tools:text="@string/id_passo" />

    <TextView
        android:id="@+id/txt_descricao_curta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/tamanho_sub_titulo"
        app:layout_constraintBottom_toBottomOf="@id/cor_descricao"
        app:layout_constraintEnd_toEndOf="@id/cor_descricao"
        app:layout_constraintLeft_toLeftOf="@id/cor_descricao"
        app:layout_constraintTop_toTopOf="@id/cor_descricao"
        tools:text="@string/descricao_curta" />

    <TextView
        android:id="@+id/txt_descricao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margem_padrao"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/cor_descricao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/cor_descricao"
        app:layout_constraintTop_toBottomOf="@id/cor_descricao"
        app:layout_constraintVertical_bias="0.0"
        tools:text="@string/descricao" />

    <ImageButton
        android:id="@+id/btn_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/txt_descricao"
        app:layout_constraintTop_toBottomOf="@+id/txt_descricao"
        app:srcCompat="@android:drawable/presence_video_online" />


    <View
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/margem_padrao"
        android:background="@color/colorPrimaryLight"
        app:layout_constraintTop_toBottomOf="@id/btn_camera" />


</android.support.constraint.ConstraintLayout>